--- a/.github/workflows/myworkflow.yml
+++ b/.github/workflows/myworkflow.yml
@@ -12,3 +12,5 @@ jobs:
      - run: make setup
      - run: make test
      - run: make lint
+     - name: Print Hello from Hexlet
+       uses: hexlet-components/hello-from-hexlet-action@release
